fix: fix wrap height

--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@ body {
   margin: 0 auto;
   height: 100%;
   width: 70%;
+  margin-top: 100px;
 }
 .text {
   font-size: 16px;
